--- a/public/css/styleMainPage.css
+++ b/public/css/styleMainPage.css
@@ -18,27 +18,29 @@ p{
 
 .content{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .image-placeholder{
-    display: flex;
-    justify-content: center;
     width: 55vw;
     height: 60vh;
     background: #FFFFFF;
     border-radius: 50px;
-    margin: 10px
+    margin: 10px;
+    overflow: hidden;
 }
 
 #image-placeholder>img{
+    display: flex;
+    justify-content: center;
     max-width: 100%;
     max-height: 60vh;
+
 }
 
 .image-upload-button{
     width: 55vw;
-    height: 7vh;
+    min-height: 7vh;
     background: #FFFFFF;
     border-radius: 50px;
     margin: 10px
@@ -74,7 +76,7 @@ p{
     display: flex;
     justify-content: center;
     width: 25vw;
-    height: 60vh;
+    min-height: 60vh;
     background: #FFFFFF;
     border-radius: 50px;
     margin: 10px;
@@ -97,6 +99,14 @@ input[type=text]{
 
 }
 
+input[type=text]::placeholder{
+    color: white;
+    font-family: 'Poppins', system-ui;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+}
+
 .image-data > label{
     font-family: 'Poppins', system-ui;
     font-style: normal;
@@ -106,11 +116,24 @@ input[type=text]{
 
 }
 
-
 .exifdata-download-button{
+    display: flex;
+    justify-content: center;
     width: 25vw;
     height: 7vh;
     background: #FFFFFF;
     border-radius: 50px;
     margin: 10px
+}
+
+.download-btn{
+    background-color: white;
+    border: none;
+    color: #2F3A78;
+    text-decoration: none;
+    font-family: 'Poppins', system-ui;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    cursor: pointer;
 }
