--- a/public/css/styleMainPage.css
+++ b/public/css/styleMainPage.css
@@ -22,8 +22,10 @@ p{
 }
 
 .image-placeholder{
-    width: 55vw;
-    height: 60vh;
+    display: flex;
+    justify-content: center;
+    width: 54vw;
+    height: 75vh;
     background: #FFFFFF;
     border-radius: 50px;
     margin: 10px;
@@ -31,15 +33,16 @@ p{
 }
 
 #image-placeholder>img{
-    display: flex;
-    justify-content: center;
     max-width: 100%;
-    max-height: 60vh;
+    max-height: 75vh;
 
 }
 
 .image-upload-button{
-    width: 55vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 54vw;
     min-height: 7vh;
     background: #FFFFFF;
     border-radius: 50px;
@@ -49,6 +52,7 @@ p{
 .image-upload-input{
     opacity: 0;
     overflow: hidden;
+    height: 0.5vh;
 }
 .image-upload-input + label {
     border: none;
@@ -61,9 +65,6 @@ p{
     color: #2F3A78;
     display: flex;
     justify-content: center;
-}
-
-.image-upload-input + label{
     cursor: pointer;
 }
 
@@ -76,7 +77,7 @@ p{
     display: flex;
     justify-content: center;
     width: 25vw;
-    min-height: 60vh;
+    min-height: 75vh;
     background: #FFFFFF;
     border-radius: 50px;
     margin: 10px;
